--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="app_name">PocketSphinx Demo</string>
+    <string name="app_name">Conversationalist</string>
 
     <string name="kws_caption">To start demonstration say \"start".</string>
-    <string name="menu_caption">Say \"digits\", \"forecast\" or \"phones\" to choose the grammar, language model or phonetic decoder example.</string>
-    <string name="digits_caption">To try recognition of digits: say something like \"one two three four five\".</string>
-    <string name="forecast_caption">To try recognition of a weather forecast like \"sunny spells on Wednesday\".</string>
-    <string name="phone_caption">To try phonetic recognition say anything.</string>
 
     <string name="scene1"> Hi, welcome to Starbucks, how may I take your order? \n 1. May I get a
         tea? \n 2. Can I have a coffee?</string>
