--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 About
 =====
 
-This is a demonstration for Pocketsphinx on Android
+This is a demonstration for Pocketsphinx on Android.
+Developed from a project for NewHacks.
 
 See for details http://cmusphinx.sourceforge.net/wiki/tutorialandroid
