--- a/README
+++ b/README
@@ -2,6 +2,6 @@ About
 =====
 
 This is a demonstration for Pocketsphinx on Android.
-Developed from a project for NewHacks.
+Developed from a project for NewHacks and the CMU PocketSphinx tutorial.
 
 See for details http://cmusphinx.sourceforge.net/wiki/tutorialandroid
